minor change for testing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Root</title>
 </head>
 <body>
-    <h1>Good day</h1>
+    <h1>Good day, from me to thee</h1>
     <p>
         <blockquote>This will be something nifty pretty soon, one hopes...</blockquote><em>Jakob - 2/16/2019</em>
     </p>
